# lites

./: .clang-tidy  .env.build  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  ANALYZE.MD  ARCHITECTURE_ROADMAP.md  BUILD_PROGRESS_REPORT.md  BUILD_SYSTEM_ANALYSIS.md  BUILD_SYSTEM_COMPLETENESS_ANALYSIS.md  CHANGELOG  CLAUDE.md  CMakeLists.txt  COMPLETE_STATUS_REPORT.md  COMPREHENSIVE_STRUCTURE_AUDIT.md  DOCUMENTATION_INDEX.md  ERROR_REDUCTION_PLAN.md  LICENSE  LICENSE_MAP  MAKEFILE_AUDIT_INDEX.md  MAKEFILE_QUICK_REFERENCE.md  MODERNIZATION_PLAN.md  Makefile  Makefile.docker  Makefile.new  QUICK_REFERENCE_CLEANUP.md  README.md  README_AUDIT_DELIVERABLES.txt  REQUIREMENTS.md  TODO_FIXME_STUB_CATALOG.md  WORKFLOW_OPTIMIZATION.md  buf.h  callout.h  cloc.json  conf.h  dirent.h  dmap.h  (+24 more)
.claude/: settings.local.json
.codex/: setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  ci.yml  deploy-web-terminal.yml  docker-i386-ci.yml
BSD/: 4_3BSD_Reno  4_3BSD_Tahoe  4_3UWiscBSD  README.md  generate_diffs.sh  i386_boot_bsd  netbsd
Historical Archives/legacy_build/: README
Items1/: CHANGELOG  setup.md
Items1/lites-1.0/: Makefile
Items1/lites-1.1-950808/: configure
Items1/lites-1.1.u2/: Makefile.in
arch/: CMakeLists.txt
arch/x86_64_v1/: CMakeLists.txt  README.md  startup.c  tlb.c  tlb.h
archives/: README.md
archives/legacy_build/: Makefile.docker
bootstrap/: def_pager_setup.c  default_pager.c  ext2_file_io.c  ext2_fs.h  ffs_file_io.c  fs.h  load.c  minix_file_io.c  strfcns.c
core/: alloc.c  alloc.h  audit.h  auth.h  compose.h  fio.c  insque.c  ipc_queue.h  mach_debug.h  main.c  norma_vm.h  p_defs.h  pipe.c  protocols.h  remque.c  sig.c  sys1.c  sys2.c  sys3.c  sys4.c  trap.c  xk_debug.h
core/iommu/: iommu.c
crypto/: keystore.c
ddekit/: attribs.h  initcall.h  inline.h  thread.h
docker/: CI_CD.md  CI_CD_WORKFLOW.md  CONSOLIDATION_REPORT.md  DOCKER_GUIDE.md  Dockerfile.i386-dev  GETTING_STARTED.md  INDEX.md  README.md  TROUBLESHOOTING.md  docker-compose.yml
docker/docs-archive-2025-11-14/: BOOTABLE_IMAGE_GUIDE.md  CI_CD_WORKFLOW.md  GITHUB_ACTIONS.md  INDEX.md  MACH_HEADERS.md  OVERVIEW.md  QEMU_DISK_GUIDE.md  WORKFLOW.md
docker/scripts/: build-lites-i386.sh  convert-img-to-qcow2.sh  create-bootable-image.sh  create-lites-disk.sh  docker-build-and-run.sh  docker-shell.sh  run-qemu-i386.sh  setup-hurd-dev.sh  setup-mach-headers.sh  setup-qemu-networking.sh  test-docker-build.sh
docs/: ARCHITECTURE.md  BRANCH_ANALYSIS_2025-11-13.md  BRANCH_ANALYSIS_2025-11-14.md  Doxyfile  HEADER_GRAPH.md  HISTORY.md  INDEX.md  INTEGRATION_PLAN.md  IPC.md  MACH_BUILD_REQUIREMENTS.md  MODERNIZATION.md  POSIX.md  POSIX_ROADMAP.md  PROJECT_PLAN.md  PROJECT_STATUS.md  RESTRUCTURE_LAYOUT.md  RESTRUCTURE_PLAN.md  TRACE_ANALYSIS.md  analysis_tools.md  build_steps.md  header_graph.dot  header_graph_full.dot  iommu.md  lizard-log.md  minix3_concepts.md  modern-code-analysis.md  networking.md  posix_compat.md  posix_helpers.md  qspinlock.md  security.md  setup.md  signals.md  technical_notes.md  tmux.md
docs/analysis/: MAXIMAL_SYNTHESIS_2025-11-13.md
docs/audits/: AUDIT_EXECUTIVE_SUMMARY.md  MAKEFILE_AUDIT_REPORT.md  REPOSITORY_STRUCTURE_ANALYSIS.md
docs/references/: AGENTS.md
docs/sphinx/: api.rst  conf.py  index.rst
docs/tool_reports/: cloc.md  cppcheck.md  cscope.md  flake8.md  flawfinder.md  jshint.md  lizard_summary.md  mypy.md  pylint.md  sloccount_summary.md  valgrind.md
drivers/iommu/: iommu.c  iommu.h  iommu_v2.c
flattened/exokernel/: README.md
flattened/libos/: README.md
flattened/microkernel/: README.md
include/: afs.h  audit.h  auth.h  bpfilter.h  bsd_1_server.h  bsd_types_gen.h  c23_arch.h  cap.h  ccitt.h  cd9660.h  compat_43.h  compat_oldsock.h  cpus.h  diagnostic.h  dirent.h  eon.h  errno.h  ether_as_syscall.h  ext2fs.h  fdesc.h  ffs.h  gateway.h  hy.h  imp.h  iommu.h  kernfs.h  lfs.h  mach.h  mach_host.h  mach_interface.h  mach_ipc_test.h  mach_ldebug.h  mach_machine_routines.h  mach_port.h  map_ether.h  mfs.h  minixfs.h  msdosfs.h  namei_macros.h  nfs.h  (+27 more)
kern/: audit.c  auth.c  runqueue.c  sched.c  sched.h  timer.c  zalloc.h
liblites/: Makefile  simd.c
libposix/: posix.c  pthread.c
lites-1.1-950808/: Makefile.in
lites-1.1.1/: configure
lites-1.1.u1/: configure  makefile
lites-1.1.u2/: configure  makefile
machine/: param.h  pcb.h
offline_packages/: README.md
openmach/: README.md
posix/: net.c
scripts/: README.md  check-kr.sh  check_build_tools.sh  clang-shim.sh  codex-setup.service  configuredb.sh  extract-xmach-headers.sh  flatten-headers.sh  flatten_tree.sh  format-code.sh  gen-license-map.sh  generate-diffs.sh  header_graph.py  import-mach-headers.sh  include_graph.sh  move_all_headers.sh  run-clang-tidy.sh  run-precommit.sh  run-qemu.sh  setup-build-environment.sh  tmux-qemu.sh  trace_graph.py  unify_same_name.sh
tests/: CMakeLists.txt  test_trace_graph.py
tests/audit/: Makefile  test_audit.c
tests/cap/: Makefile  test_cap.c
tests/fifo_test/: Makefile  test_fifo.c
tests/integration/: CMakeLists.txt  README.md
tests/integration/spawn_wait/: Makefile  test_spawn_wait.c
tests/integration/vm_fault/: test_vm_fault.c
tests/iommu/: Makefile  test_iommu.c
tests/pipe/: Makefile  test_pipe.c
tests/posix/: Makefile  dirlist.c  test_posix.c  test_posix_net.c
tests/signal/: Makefile  test_signal.c
tests/spawn_wait/: Makefile  child.c  test_spawn_wait.c
tests/timer/: Makefile  test_timer.c
tests/unit/: CMakeLists.txt  README.md
tests/unit/audit/: test_audit.c
tests/unit/cap/: test_cap.c
tests/unit/ddekit/: test_vmalloc.c
tests/unit/fifo_test/: Makefile  test_fifo.c
tests/unit/iommu/: test_iommu.c
tests/unit/pipe/: test_pipe.c
tests/unit/posix/: Makefile  test_posix.c
tests/unit/xec596/: test_xec596_init.c
tests/userspace/: README.md
tests/vfs/: Makefile  test_vfs.c
tests/vm_fault/: Makefile  test_vm_fault.c
util/: random_int.c
web-terminal/: README.md  docker-compose.yml  index.html  quick-start.sh
(+695 files in other folders)
